--- a/package.json
+++ b/package.json
@@ -12,16 +12,25 @@
   "dependencies": {
     "@astrojs/check": "^0.3.1",
     "@astrojs/mdx": "^1.1.5",
+    "@astrojs/react": "^3.1.0",
     "@astrojs/tailwind": "^5.0.2",
-    "@types/canvas-confetti": "^1.6.0",
+    "@types/canvas-confetti": "^1.6.4",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
     "astro": "^3.6.1",
     "autoprefixer": "^10.4.15",
     "canvas-confetti": "^1.6.0",
+    "clsx": "^2.1.0",
+    "framer-motion": "^11.0.8",
     "postcss": "^8.4.28",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss": "^3.3.3",
     "typescript": "^5.3.2"
   },
   "devDependencies": {
+    "@types/node": "^20.11.25",
     "prettier": "^3.1.0",
     "prettier-plugin-astro": "^0.12.2",
     "prettier-plugin-tailwindcss": "^0.5.7"
