--- a/.prettierrc
+++ b/.prettierrc
@@ -1,4 +1,8 @@
 {
-  "$schema": "http://json.schemastore.org/prettierrc",
-  "plugins": ["prettier-plugin-tailwindcss"]
+	"plugins": ["prettier-plugin-tailwindcss"],
+	"jsxSingleQuote": true,
+	"bracketSameLine": true,
+	"tabWidth": 4,
+	"singleQuote": true,
+	"useTabs": true
 }
