--- a/package.json
+++ b/package.json
@@ -1,38 +1,37 @@
 {
-  "name": "aldierydotcom",
-  "type": "module",
-  "version": "0.0.1",
-  "scripts": {
-    "dev": "astro dev",
-    "start": "astro dev",
-    "build": "astro check && astro build",
-    "preview": "astro preview",
-    "astro": "astro"
-  },
-  "dependencies": {
-    "@astrojs/check": "^0.3.1",
-    "@astrojs/mdx": "^1.1.5",
-    "@astrojs/react": "^3.1.0",
-    "@astrojs/tailwind": "^5.0.2",
-    "@types/canvas-confetti": "^1.6.4",
-    "@types/react": "^18.2.64",
-    "@types/react-dom": "^18.2.21",
-    "astro": "^3.6.1",
-    "autoprefixer": "^10.4.15",
-    "canvas-confetti": "^1.6.0",
-    "clsx": "^2.1.0",
-    "framer-motion": "^11.0.8",
-    "postcss": "^8.4.28",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tailwind-merge": "^2.2.1",
-    "tailwindcss": "^3.3.3",
-    "typescript": "^5.3.2"
-  },
-  "devDependencies": {
-    "@types/node": "^20.11.25",
-    "prettier": "^3.1.0",
-    "prettier-plugin-astro": "^0.12.2",
-    "prettier-plugin-tailwindcss": "^0.5.7"
-  }
+	"name": "fullstack",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start",
+		"lint": "next lint"
+	},
+	"dependencies": {
+		"@icons-pack/react-simple-icons": "^9.4.1",
+		"@radix-ui/react-icons": "^1.3.0",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.0",
+		"framer-motion": "^11.0.28",
+		"lucide-react": "^0.368.0",
+		"next": "14.1.4",
+		"react": "^18",
+		"react-dom": "^18",
+		"tailwind-merge": "^2.2.2",
+		"tailwindcss-animate": "^1.0.7"
+	},
+	"devDependencies": {
+		"@types/node": "^20",
+		"@types/react": "^18",
+		"@types/react-dom": "^18",
+		"autoprefixer": "^10.0.1",
+		"eslint": "^8",
+		"eslint-config-next": "14.1.4",
+		"postcss": "^8",
+		"prettier": "^3.2.5",
+		"prettier-plugin-tailwindcss": "^0.5.13",
+		"tailwindcss": "^3.3.0",
+		"typescript": "^5"
+	}
 }
